deployment-strategies/A-B-strategy/virtualservice-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  hosts:
    - my-app.local
  gateways:
    - my-app
  http:
    - route:
        - destination:
            host: my-app-v1
          weight: 90
        - destination:
            host: my-app-v2
          weight: 10
